<resources>
    <string name="app_name">OnTheStreet</string>
    <string name="action_settings">Settings</string>
    <string name="acb_edit">Edit</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_desc">Description</string>
    <string name="contDesc_pictureplace">Place picture</string>
    <string name="acb_save">Save</string>
    <string name="acb_cancel">Cancel</string>
    <string name="acb_search">Search a place</string>
    <string name="acb_associate_contact">Associate contact</string>
    <string name="acb_remove_search_results">Remove search results</string>
    <string name="acb_sort_by">Sort by...</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="txt_associated_contacts">Associated contacts:</string>
    <string name="CAB_delete_place">Delete place</string>
    <string name="CAB_share_place">Share this place!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design are: typography, grids, space, scale and color."
    </string>
    <string name="lbl_neighborhood">Neighborhood</string>
    <string name="lbl_longitude">longitude:</string>
    <string name="lbl_latitude">latitude:</string>
    <string name="txt_hintLongitude">e.g 50.2715</string>
    <string name="txt_hintLatitude">e.g -12.9406</string>
    <string name="txt_useGPS">Use GPS</string>
    <string name="txt_NA_coordinates">(N/A , N/A)</string>
</resources>
