<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_place"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.deusto.onthestreet.onthestreet.CreateEditPlaceActivity">

    <EditText
        android:id="@+id/et_latitude"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_longitude"
        android:layout_marginStart="31dp"
        android:layout_toEndOf="@+id/tv_latitude"
        android:ems="10"
        android:hint="@string/txt_hintLatitude"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_latitude"
        android:layout_alignBottom="@+id/et_latitude"
        android:layout_alignEnd="@+id/tv_longitude"
        android:labelFor="@+id/et_desc"
        android:text="@string/lbl_latitude"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_desc"
        android:layout_alignTop="@+id/tv_location"
        android:layout_marginStart="11dp"
        android:labelFor="@+id/et_desc"
        android:text="@string/lbl_longitude"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/et_desc"
        android:text="@string/lbl_location"
        android:layout_below="@+id/et_desc"
        android:layout_alignEnd="@+id/tv_desc" />

    <ImageButton
        android:id="@+id/create_place_img"
        android:layout_width="@dimen/list_item_place_img_width"
        android:layout_height="@dimen/list_item_place_img_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/contDesc_pictureplace"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:text="@string/lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/tv_name"
        android:labelFor="@+id/et_name"
        android:layout_below="@+id/create_place_img"
        android:layout_toStartOf="@+id/create_place_img" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_place_img"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/tv_name"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_neighborhood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_neighborhood"
        android:layout_alignBottom="@+id/et_neighborhood"
        android:layout_alignEnd="@+id/tv_name"
        android:labelFor="@+id/et_neighborhood"
        android:text="@string/lbl_neighborhood" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_neighborhood"
        android:layout_below="@+id/et_name"
        android:layout_alignStart="@+id/et_name" />

    <TextView
        android:text="@string/lbl_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_desc"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/et_desc"
        android:layout_below="@+id/et_neighborhood"
        android:layout_alignEnd="@+id/tv_neighborhood" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/et_neighborhood"
        android:layout_below="@+id/et_neighborhood"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/tv_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_gps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:labelFor="@+id/listView"
        android:text="@string/txt_associated_contacts" />

    <ListView
        android:id="@+id/listView"
        android:layout_below="@+id/tv_contacts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@color/contacts_backgroundColor">
    </ListView>

    <EditText
        android:id="@+id/et_longitude"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_longitude"
        android:layout_alignBottom="@+id/tv_longitude"
        android:layout_alignStart="@+id/et_latitude"
        android:ems="10"
        android:hint="@string/txt_hintLongitude"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btn_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_latitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-5dp"
        android:text="@string/txt_useGPS" />

</RelativeLayout>
