<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.deusto.onthestreet.onthestreet.PlaceDetailsActivity"
    tools:showIn="@layout/activity_place_details">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:id="@+id/tv_neighborhood"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text"
            android:id="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:fontFamily="monospace"
            android:text="@string/txt_NA_coordinates"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/txt_associated_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_contacts_details"
            android:layout_marginTop="55dp"
            android:labelFor="@+id/listView_details"
            android:textAlignment="center" />

        <ListView
            android:id="@+id/listView_details"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="30dp">
        </ListView>
    </LinearLayout>



</android.support.v4.widget.NestedScrollView>
